list quiz and start quiz completed

--- a/templates/includes/quiz.html
+++ b/templates/includes/quiz.html
@@ -1,5 +1,5 @@
 <div class="quiz-container card shadow-lg p-4 bg-white">
-    <h1 class="card-title text-center text-primary fw-bold">General Knowledge Quiz</h1>
+    <h1 class="card-title text-center text-primary fw-bold">{{quiz_data.quiz_name}}</h1>
     
     <div class="progress mb-3">
         <div id="progress-bar" class="progress-bar bg-success" role="progressbar" style="width: 0%;"></div>
