--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,8 @@
     </div>
 
     {% include "includes/footer.html" %}
-
+    {% block extra_js %}
+    {% endblock extra_js %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'assets/js/script.js' %}"></script>
 </body>
