--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -17,10 +17,13 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">View Quizzes</a>
+                    <a class="nav-link" href="{% url 'quiz_app:list_quiz' %}">View Quizzes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Account</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'auth_app:logout' %}">Logout</a>
                 </li>
             </ul>
         </div>
