--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     {% include "includes/nav.html" %}
@@ -37,5 +38,27 @@
     {% endblock extra_js %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'assets/js/script.js' %}"></script>
+
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    {% for message in messages %}
+        {% if message.tags == 'success' %}
+            
+            <script>
+                swal.fire({
+                    "title": "Thank you!",
+                    "text": "{{ message }}",
+                    "icon": "success"
+                })
+            </script>
+        {% else %}
+            <script>
+                swal.fire({
+                    "title": "Sorry!",
+                    "text": "{{ message }}",
+                    "icon": "warning"
+                })
+            </script>
+        {% endif %}
+    {% endfor %}
 </body>
 </html>
