--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2025 Awesome Quiz. All Rights Reserved.</p>
+    <p>&copy; <script>document.write(new Date().getFullYear())</script> {{business_name}}. All Rights Reserved. Designed by <a href="https://github.com/niyimarc"> Drey</a></p>
 </footer>
