--- a/templates/includes/list_retry_quiz.html
+++ b/templates/includes/list_retry_quiz.html
@@ -1,9 +1,9 @@
-<h1 class="text-center text-primary fw-bold mb-4">{{quiz_data.message}}</h1>
+<h1 class="text-center text-primary fw-bold mb-4">{{message}}</h1>
 
 <div class="container">
     <div class="row g-4 justify-content-center">
-        {% if quiz_data.options %}
-            {% for quiz in quiz_data.options %}
+        {% if options %}
+            {% for quiz in options %}
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card quiz-card shadow-sm h-100">
                     <div class="card-body d-flex flex-column">
@@ -23,3 +23,36 @@
         {% endif %}
     </div>
 </div>
+
+<nav aria-label="Quiz Page Navigation" class="mt-4">
+    <ul class="pagination justify-content-center">
+        {% if has_prev %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page|add:'-1' }}{% if category_id %}&category_id={{ category_id }}{% endif %}{% if search %}&search={{ search }}{% endif %}">Previous</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled"><a class="page-link">Previous</a></li>
+        {% endif %}
+
+        {% for p in page_numbers %}
+        <li class="page-item {% if p == page %}active{% endif %}">
+            <a class="page-link" href="?page={{ p }}{% if category_id %}&category_id={{ category_id }}{% endif %}{% if search %}&search={{ search }}{% endif %}">{{ p }}</a>
+        </li>
+        {% endfor %}
+
+        {% if show_ellipsis %}
+        <li class="page-item disabled"><a class="page-link">…</a></li>
+        <li class="page-item">
+            <a class="page-link" href="?page={{ total_pages }}{% if category_id %}&category_id={{ category_id }}{% endif %}{% if search %}&search={{ search }}{% endif %}">{{ total_pages }}</a>
+        </li>
+        {% endif %}
+
+        {% if has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page|add:'1' }}{% if category_id %}&category_id={{ category_id }}{% endif %}{% if search %}&search={{ search }}{% endif %}">Next</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled"><a class="page-link">Next</a></li>
+        {% endif %}
+    </ul>
+</nav>
