--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,14 @@
     {% block extra_js %}
     {% endblock extra_js %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const URLS = {
+            startQuiz: "{% url 'quiz_app:list_quiz' %}",
+            retryQuizzes: "{% url 'quiz_app:list_retry_quizzes' %}",
+            manageQuiz: "{% url 'manage_quiz:manage_quiz' %}"
+        };
+    </script>
+
     <script src="{% static 'assets/js/script.js' %}"></script>
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
