--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -79,11 +79,14 @@ body {
 .list-group-item.option.correct {
     background-color: #d4edda;
     border-color: #c3e6cb;
+    color: #155724;
+
 }
 
 .list-group-item.option.incorrect {
     background-color: #f8d7da;
     border-color: #f5c6cb;
+    color: #721c24;
 }
 
 .feedback-correct {
