--- a/templates/includes/add_quiz.html
+++ b/templates/includes/add_quiz.html
@@ -1,4 +1,4 @@
-<div class="add-quiz-container card shadow-lg p-4 bg-white">
+<div class="add-quiz-container card shadow-lg p-4 bg-white mb-5">
     <h1 class="card-title text-center text-primary fw-bold">Add a New Quiz</h1>
     <form method="POST">
     {% csrf_token %}
@@ -9,6 +9,12 @@
         <div class="mb-3">
             <label for="spreadsheetUrl" class="form-label">Spreadsheet URL</label>
             <input type="url" name="sheet_url" class="form-control" id="spreadsheetUrl" required>
+            <div class="form-text">
+                Don’t have a spreadsheet? 
+                <a href="{% url 'manage_quiz:instruction' %}" target="_blank">
+                    Learn how to create one
+                </a>.
+            </div>
         </div>
         <div class="mb-3">
             <label for="category" class="form-label">Category</label>
