fixed wrong  current questions in session bug

--- a/templates/includes/list_quizzes.html
+++ b/templates/includes/list_quizzes.html
@@ -32,6 +32,11 @@
                                 {% endfor %}
                             </small>
                         </p>
+                        <p class="card-text text-muted">
+                            <small>Quiz Creator: 
+                                    <span class="badge bg-secondary">{{ quiz.quiz_creator }}</span>
+                            </small>
+                        </p>
                         <p class="card-text">
                             <small>Total Participants: 
                                 <span class="fw-bold">{{quiz.total_participants}}</span>
